# boundary-coverage

./: .cursorignore  .editorconfig  .env.example  .gitignore  README.md  analysis.py  app.py  boundaries.py  bubble_experimentation.ipynb  bubble_generation.py  environment.yml  generate_bubbles.py  main.py  main.test.py  meta_upload.py  pyproject.toml  utils.py
docs/: meta-api-setup.md
output/constituencies/: bubbles_test.csv  statistics.csv
output/wards/: statistics.csv
postcodes/: postcodes.py  sectors.ipynb
templates/: index.html
tests/: available_wards.txt
